###
##############################################################################
#
# PMlib - Performance Monitor library
#
# Copyright (c) 2010-2011 VCAD System Research Program, RIKEN.
# All rights reserved.
#
# Copyright (c) 2012-2015 Advanced Institute for Computational Science, RIKEN.
# All rights reserved.
#
##############################################################################
###
#	OTF_DIR = /home/ra000004/mikami/otf/install_dir

lib_LIBRARIES = libotf_ext.a

libotf_ext_a_CXXFLAGS = -I$(top_srcdir)/include -I@OTF_DIR@/include/open-trace-format

libotf_ext_a_CFLAGS = -I$(top_srcdir)/include -I@OTF_DIR@/include/open-trace-format

libotf_ext_a_SOURCES = otf_ext.c

nobase_include_HEADERS =

#	EXTRA_DIST = Makefile_hand
