###
##############################################################################
#
# PMlib - Performance Monitor library
#
# Copyright (c) 2010-2011 VCAD System Research Program, RIKEN.
# All rights reserved.
#
# Copyright (c) 2012-2015 Advanced Institute for Computational Science, RIKEN.
# All rights reserved.
#
##############################################################################
###

lib_LIBRARIES = libpapi_ext.a

libpapi_ext_a_CXXFLAGS = -I$(top_builddir)/include -I@PAPI_DIR@/include

libpapi_ext_a_CFLAGS = -I$(top_builddir)/include -I@PAPI_DIR@/include

libpapi_ext_a_SOURCES = papi_ext.c

nobase_include_HEADERS =

EXTRA_DIST = Makefile_hand
